force-app/main/default/objects/Volunteer_Shift__c/Volunteer_Shift__c.object-meta.xml
<CustomObject>
    <label>Committee</label>
    <nameField>
        <label>Committee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Committee</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>