force-app/main/default/objects/Volunteer_Shift__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <inlineHelpText>How many hours long is the shift?</inlineHelpText>
    <label>Duration (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>