force-app/main/default/objects/Volunteer_Shift__c/fields/Staff_Contact_Liaison__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact_Liaison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Contact/Liaison</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Volunteer_Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>