force-app/main/default/objects/Volunteer_Shift__c/fields/Volunteer_Job__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Job__c</fullName>
    <label>Governance Campaign</label>
    <referenceTo>Volunteer_Job__c</referenceTo>
    <relationshipLabel>Committees</relationshipLabel>
    <relationshipName>Volunteer_Job_Slots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>