force-app/main/default/objects/Volunteer_Shift__c/listViews/Campaign_Committees.listView-meta.xml
<ListView>
    <fullName>Campaign_Committees</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>Campaign Committees</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Campaign Committees</label>
</ListView>