force-app/main/default/objects/Volunteer_Shift__c/listViews/ISU_Foundation_Committees.listView-meta.xml
<ListView>
    <fullName>ISU_Foundation_Committees</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>ISU Foundation Committees</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>ISU Foundation Committees</label>
</ListView>