force-app/main/default/objects/Volunteer_Shift__c/listViews/ISUAA.listView-meta.xml
<ListView>
    <fullName>ISUAA</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>Alumni Association Leadership</value>
    </filters>
    <label>ISUAA</label>
</ListView>