force-app/main/default/objects/Volunteer_Shift__c/listViews/ISUAA_Committees.listView-meta.xml
<ListView>
    <fullName>ISUAA_Committees</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Job__c</field>
        <operation>contains</operation>
        <value>Alumni</value>
    </filters>
    <label>ISUAA Committees</label>
</ListView>