force-app/main/default/objects/Volunteer_Shift__c/listViews/University_Leadership_Committees.listView-meta.xml
<ListView>
    <fullName>University_Leadership_Committees</fullName>
    <columns>NAME</columns>
    <columns>Volunteer_Job__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Volunteer_Job__c</field>
        <operation>equals</operation>
        <value>University Leadership</value>
    </filters>
    <label>University Leadership Committees</label>
</ListView>